[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "google-genai==1.56.0",
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.5",
    "langchain-google-genai==4.1.2",
    "langchain-qdrant==1.1.0",
    "pre-commit==4.5.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pypdf==6.5.0",
    "python-dotenv==1.2.1",
    "qdrant-client==1.16.2",
    "sentence-transformers==5.2.0",
    "uvicorn[standard]==0.40.0",
]
